welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: '(' expected but identifier found.
while continuer {
      ^BDR2:21: error: illegal start of simple expression
	}
        ^